# xfce4-mxdock-plugin

./: .gitignore  Makefile.am  README.md  TODO.md  config.h.in~  configure.ac  configure.ac.in  mxdock.desktop
po/: .po  LINGUAS  POTFILES  a.gmo  a.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  es.gmo  es.po  et.gmo  et.po  eu.gmo  eu.po  fa.gmo  fa.po  fi.gmo  fi.po  fr.gmo  fr.po  he.gmo  he.po  hi.gmo  hi.po  hr.gmo  hr.po  hu.gmo  hu.po  id.gmo  id.po  is.gmo  is.po  it.gmo  it.po  ja.gmo  (+44 more)
src/: AppInfos.cpp  AppInfos.hpp  Config.cpp  Config.hpp  Dock.cpp  Dock.hpp  Group.cpp  Group.hpp  GroupMenu.cpp  GroupMenu.hpp  GroupMenuItem.cpp  GroupMenuItem.hpp  GroupWindow.cpp  GroupWindow.hpp  Helpers.cpp  Makefile.am  Plugin.cpp  Plugin.hpp  PluginContext.cpp  PluginContext.hpp  Settings.cpp  Settings.hpp  SettingsDialog.cpp  State.tpp  Store.tpp  Theme.cpp  Wnck.cpp  Wnck.hpp  _dialogs.xml  _dialogs.xml~  oldDraw.cpp
